--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -2,24 +2,43 @@ name: 01 - Test
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
+  pull_request:
+    types: 
+      - opened
+      - reopened
+    branches:
+      - 'test**'
+  schedule:
+    - cron: "15 * * * *"
+  workflow_dispatch
 
 jobs:
+  branch-test-hello: 
+    if: startsWith(github.head_ref, 'test')
+    steps:
+      - name: This is from branch
+        run: echo "${{ GITHUB_HEAD_REF }}"
+      - name: Show the trigger
+        run: echo "${{ toJSON(github.event) }}"
   echo-hello:
     runs-on: ubuntu-latest
     steps:
       - name: Echo Hello
         run: echo "Hello, World!"
-  echo-goodbye:
-    runs-on: ubuntu-latest
-    needs: echo-hello
-    steps:
-      - name: Failed steps
-        run: |
-          echo "I will fail!"
-          exit 1
-      - name: Say goodbye
-        run: echo "No Goodbye, World!"
-      - name: Say goodbye always
-        if: always()
-        run: echo "Goodbye, World!"
+      - name: This is from branch
+        run: echo "${{ GITHUB_HEAD_REF }}"
+      - name: Show the trigger
+        run: echo "${{ toJSON(github.event) }}"
+  # echo-goodbye:
+  #   runs-on: ubuntu-latest
+  #   needs: echo-hello
+  #   steps:
+  #     - name: Failed steps
+  #       run: |
+  #         echo "I will fail!"
+  #         exit 1
+  #     - name: Say goodbye
+  #       run: echo "No Goodbye, World!"
+  #     - name: Say goodbye always
+  #       if: always()
+  #       run: echo "Goodbye, World!"
