--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -10,7 +10,7 @@ on:
       - 'test**'
   schedule:
     - cron: "15 * * * *"
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   branch-test-hello: 
