--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -14,10 +14,11 @@ on:
 
 jobs:
   branch-test-hello: 
+    runs-on: ubuntu-latest
     if: startsWith(github.head_ref, 'test')
     steps:
       - name: This is from branch
-        run: echo "${{ GITHUB_HEAD_REF }}"
+        run: echo "$GITHUB_HEAD_REF"
       - name: Show the trigger
         run: echo "${{ toJSON(github.event) }}"
   echo-hello:
@@ -26,7 +27,7 @@ jobs:
       - name: Echo Hello
         run: echo "Hello, World!"
       - name: This is from branch
-        run: echo "${{ GITHUB_HEAD_REF }}"
+        run: echo "${GITHUB_HEAD_REF}"
       - name: Show the trigger
         run: echo "${{ toJSON(github.event) }}"
   # echo-goodbye:
