--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -7,7 +7,7 @@ on:
       - opened
       - reopened
     branches:
-      - 'test*'
+      - 'main'
   schedule:
     - cron: "15 * * * *"
   workflow_dispatch:
