--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -8,8 +8,8 @@ on:
       - reopened
     branches:
       - 'main'
-  schedule:
-    - cron: "15 * * * *"
+  # schedule:
+  #   - cron: "15 * * * *"
   workflow_dispatch:
 
 jobs:
