--- a/.github/workflows/01-test.yaml
+++ b/.github/workflows/01-test.yaml
@@ -1,13 +1,13 @@
 name: 01 - Test
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    types: 
-      - opened
-      - reopened
-    branches:
-      - 'main'
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   types: 
+  #     - opened
+  #     - reopened
+  #   branches:
+  #     - 'main'
   # schedule:
   #   - cron: "15 * * * *"
   workflow_dispatch:
@@ -29,7 +29,7 @@ jobs:
       - name: This is from branch
         run: echo "${GITHUB_HEAD_REF}"
       - name: Show the trigger
-        run: echo "${{ toJSON(github.event) }}"
+        run: echo "${{ github.event_name }}"
   # echo-goodbye:
   #   runs-on: ubuntu-latest
   #   needs: echo-hello
